crates/fluvio-connector-common/ui-test/ui/config_use_reserved_name_transforms.stderr
error: Custom config name conflicts with reserved names: 'meta' and 'transforms'
 --> ui-test/ui/config_use_reserved_name_transforms.rs:7:1
  |
7 | struct CustomConfig {}
  | ^^^^^^

error[E0412]: cannot find type `CustomConfig` in this scope
 --> ui-test/ui/config_use_reserved_name_transforms.rs:4:27
  |
4 | async fn start_fn(config: CustomConfig, producer: ()) {}
  |                           ^^^^^^^^^^^^ not found in this scope

error[E0433]: failed to resolve: use of undeclared type `CustomConfig`
 --> ui-test/ui/config_use_reserved_name_transforms.rs:4:27
  |
4 | async fn start_fn(config: CustomConfig, producer: ()) {}
  |                           ^^^^^^^^^^^^ use of undeclared type `CustomConfig`

error[E0308]: mismatched types
 --> ui-test/ui/config_use_reserved_name_transforms.rs:3:1
  |
3 | #[connector(source)]
  | ^^^^^^^^^^^^^^^^^^^^ expected `()`, found `TopicProducer`
4 | async fn start_fn(config: CustomConfig, producer: ()) {}
  |          -------- arguments to this function are incorrect
  |
note: function defined here
 --> ui-test/ui/config_use_reserved_name_transforms.rs:4:10
  |
4 | async fn start_fn(config: CustomConfig, producer: ()) {}
  |          ^^^^^^^^                       ------------
  = note: this error originates in the attribute macro `connector` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the `?` operator can only be used in an async block that returns `Result` or `Option` (or another type that implements `FromResidual`)
 --> ui-test/ui/config_use_reserved_name_transforms.rs:3:20
  |
3 | #[connector(source)]
  | -------------------^
  | |                  |
  | |                  cannot use the `?` operator in an async block that returns `()`
  | this function should return `Result` or `Option` to accept `?`
  |
  = help: the trait `FromResidual<Result<Infallible, anyhow::Error>>` is not implemented for `()`
  = note: this error originates in the attribute macro `connector` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the `?` operator can only be applied to values that implement `Try`
 --> ui-test/ui/config_use_reserved_name_transforms.rs:3:1
  |
3 | #[connector(source)]
  | ^^^^^^^^^^^^^^^^^^^^ the `?` operator cannot be applied to type `()`
  |
  = help: the trait `Try` is not implemented for `()`
